# tuliprox

./: .dockerignore  .editorconfig  .gitignore  .markdownlint.json  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  TODO.md  book.css  book.toml  rustfmt.toml
backend/: Cargo.toml
backend/src/: main.rs  messaging.rs  modules.rs
backend/src/api/: api_utils.rs  config_file.rs  config_watch.rs  hdhomerun_proprietary.rs  hdhomerun_ssdp.rs  library_scan.rs  main_api.rs  mod.rs  panel_api.rs  scheduler.rs  serve.rs  setup_api.rs  sys_usage.rs
backend/src/api/endpoints/: api_playlist_utils.rs  custom_video_stream_api.rs  download_api.rs  extract_accept_header.rs  hdhomerun_api.rs  hls_api.rs  library_api.rs  m3u_api.rs  mod.rs  rbac_api.rs  stream_history_api.rs  user_api.rs  v1_api.rs  v1_api_config.rs  v1_api_playlist.rs  v1_api_user.rs  web_index.rs  websocket_api.rs  xmltv_api.rs  xtream_api.rs
backend/src/api/model/: active_provider_manager.rs  active_user_manager.rs  app_state.rs  batch_result_collector.rs  connection_manager.rs  download.rs  event_manager.rs  metadata_update_manager.rs  mod.rs  model_utils.rs  playlist_mem_cache.rs  provider_config.rs  provider_dns_manager.rs  provider_lineup_manager.rs  qos_aggregation_manager.rs  recording_worker.rs  request.rs  stream.rs  stream_error.rs  update_guard.rs  xtream.rs
backend/src/auth/: auth_basic.rs  auth_bearer.rs  authenticator.rs  mod.rs  password.rs
backend/src/model/: input_source.rs  media_properties.rs  mod.rs  playlist.rs  xmltv.rs  xtream.rs
backend/src/model/config/: api_proxy.rs  api_user.rs  app.rs  base.rs  cache.rs  epg_smart_match.rs  favourites.rs  hdhomerun.rs  input.rs  ip_check.rs  library.rs  media_tools.rs  metadata_update.rs  mod.rs  panel_api.rs  qos_aggregation.rs  rename.rs  reverse_proxy.rs  schedule.rs  source.rs  stream.rs  stream_history.rs  target.rs  video_download.rs  web_auth.rs  web_ui.rs
backend/src/processing/: geoip.rs  input_cache.rs  mod.rs  playlist_watch.rs
backend/src/processing/parser/: hls.rs  m3u.rs  xmltv.rs  xtream.rs
backend/src/processing/processor/: epg.rs  filtered_playlist_source.rs  library.rs  mod.rs  playlist.rs  probe_handle_guard.rs  resolve_options.rs  sort.rs  stream_probe.rs  trakt.rs  xtream.rs  xtream_series.rs  xtream_vod.rs
backend/src/ptt/: handlers.rs  parser.rs
backend/src/repository/: alias_repository.rs  bplustree.rs  bplustree_migration.rs  bplustree_stress.rs  epg_repository.rs  library_repository.rs  m3u_playlist_iterator.rs  m3u_repository.rs  mod.rs  playlist_repository.rs  playlist_source.rs  playlist_stream.rs  provider_dns_repository.rs  provider_source.rs  qos_snapshot_repository.rs  sorted_index.rs  storage.rs  storage_const.rs  strm_repository.rs  target_id_mapping.rs  user_repository.rs  xtream_playlist_iterator.rs  xtream_repository.rs
backend/src/repository/stream_history/: archive.rs  file.rs  mod.rs  reader.rs  storage.rs  writer.rs
backend/src/tools/: flags_builder.rs  lru_cache.rs
backend/src/utils/: binary_utils.rs  crypto_utils.rs  db_viewer.rs  epg_parser.rs  ffmpeg.rs  geoip.rs  logging.rs  mod.rs  ordinal.rs  stream_history_viewer.rs  sys_utils.rs  telegram.rs
backend/src/utils/file/: config_reader.rs  file_lock_manager.rs  file_utils.rs  mapping_reader.rs  mod.rs  template_reader.rs
backend/src/utils/network/: epg.rs  m3u.rs  request.rs  xtream.rs
backend/src/utils/trakt/: client.rs
backend/tests/: provider_dns_https_sni.rs  proxy_redirect_auth.rs
frontend/: Cargo.toml  index.html
frontend/public/: config.json
frontend/public/assets/: fonts.css  icons.json
frontend/public/assets/i18n/: en.json
frontend/scss/: _default.scss  _theme.scss  main.scss
frontend/scss/app/: _app.scss  _app_header.scss  _component.scss
frontend/scss/app/components/: _collapse_panel.scss  (+29 more)
frontend/scss/themes/: _theme-aurora.scss  _theme-banana-yellow.scss  _theme-bright.scss  _theme-clubroom-contrast.scss  _theme-cool-elegance.scss  _theme-dark.scss  _theme-dopamine.scss  _theme-dracula.scss  _theme-graperoot-dark.scss  _theme-mermaidcore.scss  _theme-monokai.scss  _theme-nature-pure.scss  _theme-nord.scss  _theme-paper.scss  _theme-refined-dark.scss  _theme-sun-washed-soft.scss  _theme-vibrant-elegance.scss  _theme-vintage-neutral.scss
frontend/src/: error.rs  i18n.rs  lib.rs
frontend/src/app/: context.rs  mod.rs
frontend/src/hooks/: use_icon_context.rs  use_server_status.rs  use_service_context.rs
frontend/src/model/: background_transfer.rs  dialog.rs  event_message.rs  explorer_source_type.rs  mod.rs  view_type.rs  web_config.rs
frontend/src/provider/: dialog_provider.rs  icon_context_provider.rs  service_context_provider.rs
frontend/src/services/: auth_service.rs  config_service.rs  dialog_service.rs  downloads_service.rs  event_service.rs  flags_service.rs  mod.rs  playlist_service.rs  rbac_service.rs  requests.rs  status_service.rs  stream_history_service.rs  streams_service.rs  toastr_service.rs  user_api_service.rs  user_service.rs  websocket_service.rs
frontend/src/utils/: format.rs  mod.rs  storage.rs
shared/: Cargo.toml
shared/src/error/: tuliprox_error.rs
shared/src/foundation/: filter.rs  mapper.pest  mapper.rs  mod.rs  value_provider.rs
shared/src/model/: cluster_flags.rs  download.rs  epg.rs  info_doc_utils.rs  ip_check.rs  item_field.rs  library_request.rs  mapping.rs  media_properties.rs  messaging.rs  mod.rs  playlist.rs  playlist_categories.rs  playlist_document.rs  playlist_info_document.rs  playlist_request.rs  processing_order.rs  regex_cache.rs  short_epg.rs  stats.rs  status_check.rs  stream_info.rs  stream_meter.rs  stream_properties.rs  strm_export_style.rs  system_info.rs  target_type.rs  transfer.rs  ui_playlist_item.rs  uuidtype.rs  web_socket.rs  xtream.rs  xtream_const.rs
shared/src/utils/: bitset.rs  constants.rs  crypto.rs  default_utils.rs  directed_graph.rs  flags.rs  hash_utils.rs  hdhomerun_utils.rs  json_utils.rs  mod.rs  number_utils.rs  request.rs  serde_utils.rs  size_utils.rs  string_interner.rs  string_utils.rs  time_utils.rs
(+314 files in other folders)
