[workspace]
members = ["backend", "frontend", "shared"]
resolver = "2"

[profile.release]
debug = false
opt-level = 3       # Maximal performance
lto = "fat"         # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = 'abort'     # Abort on panic
strip = true
incremental = false


[profile.release.package.frontend]
opt-level = 'z'     # Size optimization for frontend

[profile.release.package.shared]
opt-level = 3       # optimize shared for speed