[package]
name = "tuliprox"
version = "3.2.121"
edition = "2021"
rust-version = "1.89.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lol_html = "2.7.2"
handlebars = "6.4.0"
shared = { version = "3", path = "../shared" }
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde-saphyr = "0.0.20"
serde_json = { version = "1.0.149", features = ["raw_value"] }
quick-xml = { version = "0.39.2", features = ["async-tokio", "serialize"] }
regex = "1.12.3"
clap = { version = "4.5.60", features = ["derive"] }
reqwest = { version = "0.13.2", features = ["blocking", "json", "stream", "rustls", "socks", "form"] }
url = "2.5.8"
chrono = "0.4.44"
iana-time-zone = "0.1.65"
cron = "0.15.0"
axum = { version = "0.8.8" , features = ["macros", "default", "ws"]}
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["cors", "auth", "fs", "compression-full", "trace"] }
tower_governor = { version = "0.8.0", features = ["axum"] }
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
rust-argon2 = "3.0.0"
futures = "0.3.32"
path-clean = "1.0.1"
pest = "2.8.6"
pest_derive = "2.8.6"
enum-iterator = "2.3.0"
openssl = { version = "0.10.75", features = ["vendored"] } #https://docs.rs/openssl/0.10.34/openssl/#vendored
deunicode = "1.6.2"
mime = "0.3.17"
log = "0.4.29"
env_logger = "0.11.9"
rmp-serde = "1.3.1"
rand = "0.9.2"
fastrand = "2.3.0"
rpassword = "7.4.0"
flate2 = "1.1.9"
blake3 = "1.8.3"
bytes = "1.11.1"
tokio-stream = { version = "0.1.18", features = ["sync"] }
tokio = { version = "1.49.0", features = ["rt-multi-thread", "parking_lot", "fs", "process"] }
#console-subscriber = "0"
#tracing = "0.1"
#tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tokio-util =  { version = "0.7.18", features = ["io", "io-util"] }
tempfile = "3.26.0"
filetime = "0.2.27"
strsim = "0.11.1"
rphonetic = "3.0.6"
rayon = "1.11.0"
base64 = "0.22.1"
paste = "1.0.15"
indexmap = "2.13.0"
parking_lot = "0.12.5"
lz4_flex = "0.12.0"
memmap2 = "0.9.10"
fs2 = "0.4.3"
notify = "8.2.0"
arc-swap = "1.8.2"
dashmap = "6.1.0"
hyper = "1.8.1"
hyper-util = "0.1.20"
socket2 = { version = "0.6.2", features = ["all"] }
async-compression = { version = "0.4.40", features = ["tokio"] }
chrono-tz = "0.10.4"
zeroize = "1.8.2"
sysinfo = { version = "0.38.2", default-features = false, features = ["system"] }
uuid = { version = "1.21.0", features = ["v4"] }
fancy-regex = "0.17.0"
mime_guess = "2.0.5"
crc32fast = "1.5.0"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["psapi", "minwindef", "processthreadsapi"] }
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_System_Threading"] }
#[target.'cfg(target_os = "linux")'.dependencies]
#mimalloc = "0.1"
#[target.'cfg(not(target_env = "msvc"))'.dependencies]
#tikv-jemallocator =  "0.6"
# tikv-jemallocator =  { version = "*", features = ["profiling", "unprefixed_malloc_on_supported_platforms"] }

[build-dependencies]
vergen = { version = "9.1.0", features = ["build"] }

[dev-dependencies]
http-body-util = "0.1.3"
tokio = { version = "1.49.0", features = ["test-util"] }
rcgen = "0.14.5"
rustls = "0.23.35"
tokio-rustls = "0.26.4"

[features]
proxy-auth-regression = []
