[package]
name = "tuliprox"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lol_html = "2.7.2"
handlebars = "6.4.0"
shared = { version = "3", path = "../shared" }
serde.workspace = true
serde-saphyr.workspace = true
serde_json = { workspace = true, features = ["raw_value"] }
quick-xml = { version = "0.39.2", features = ["async-tokio", "serialize"] }
regex.workspace = true
clap = { version = "4.6.0", features = ["derive"] }
reqwest = { version = "0.13.2", features = ["json", "stream", "rustls", "socks", "form"] }
url.workspace = true
chrono.workspace = true
iana-time-zone = "0.1.65"
cron.workspace = true
axum = { version = "0.8.8" , features = ["macros", "default", "ws"]}
serde_html_form = "0.4.0"
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["cors", "auth", "fs", "compression-full", "trace"] }
tower_governor = { version = "0.8.0", features = ["axum"] }
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
rust-argon2 = "3.0.0"
futures.workspace = true
path-clean.workspace = true
pest.workspace = true
pest_derive.workspace = true
enum-iterator.workspace = true
openssl = { version = "0.10.76", features = ["vendored"] } #https://docs.rs/openssl/0.10.34/openssl/#vendored
deunicode.workspace = true
mime = "0.3.17"
log.workspace = true
env_logger = "0.11.10"
rmp-serde = "1.3.1"
rand = "0.9.2"
fastrand.workspace = true
rpassword = "7.4.0"
flate2 = "1.1.9"
blake3.workspace = true
bytes.workspace = true
tokio-stream = { version = "0.1.18", features = ["sync"] }
tokio = { workspace = true, features = ["rt-multi-thread", "parking_lot", "fs", "process", "signal", "time", "macros"] }
#console-subscriber = "0"
#tracing = "0.1"
#tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tokio-util =  { version = "0.7.18", features = ["io", "io-util"] }
tempfile = "3.27.0"
filetime = "0.2.27"
strsim = "0.11.1"
rphonetic = "3.0.6"
rayon = "1.11.0"
base64.workspace = true
paste.workspace = true
indexmap.workspace = true
parking_lot = "0.12.5"
lz4_flex.workspace = true
memmap2 = "0.9.10"
fs2 = "0.4.3"
notify = "8.2.0"
arc-swap.workspace = true
dashmap.workspace = true
hyper = "1.8.1"
hyper-util = "0.1.20"
socket2 = { version = "0.6.3", features = ["all"] }
async-compression = { version = "0.4.41", features = ["tokio", "gzip", "zlib"] }
chrono-tz = "0.10.4"
zeroize.workspace = true
uuid = { version = "1.22.0", features = ["v4"] }
fancy-regex = "0.17.0"
mime_guess = "2.0.5"
crc32fast = "1.5.0"
memchr = "2.8.0"
http-body-util = "0.1.3"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
[target.'cfg(not(target_os = "linux"))'.dependencies]
sysinfo = { version = "0.38.4", default-features = false, features = ["system"] }
[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["psapi", "minwindef", "processthreadsapi", "sysinfoapi"] }
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_System_Threading"] }
#[target.'cfg(target_os = "linux")'.dependencies]
#mimalloc = "0.1"
#[target.'cfg(not(target_env = "msvc"))'.dependencies]
#tikv-jemallocator =  "0.6"
# tikv-jemallocator =  { version = "*", features = ["profiling", "unprefixed_malloc_on_supported_platforms"] }

[build-dependencies]
vergen = { version = "9.1.0", features = ["build"] }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
rcgen = "0.14.7"
rustls = "0.23.37"
tokio-rustls = "0.26.4"

[features]
proxy-auth-regression = []
