[package]
name = "frontend"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
shared = { version = "3.2.152", path = "../shared" }
chrono.workspace = true
yew = "0.22.1"
yew-router = "0.19.0"
yew-hooks = "0.5.0"
i18nrs = "0.1.9"
serde_json.workspace = true
serde.workspace = true
wasm-bindgen = {version = "0.2.114", features = ["serde-serialize"]}
#anyhow = "1.0.102"
thiserror = "2.0.18"
reqwasm = {version = "0.5", features = ["json"]}
log.workspace = true
wasm-logger = "0.2.0"
gloo-storage = "0.3.0"
gloo-utils = "0.2.0"
#gloo-render = "0.2.0"
gloo-timers = { version = "0", features = ["futures"] }
#implicit-clone = "0.6.0"
futures-signals = "0.3.34"
futures.workspace = true
wasm-bindgen-futures = "0.4.64"
js-sys = "0.3.91"
bytes.workspace = true
regex.workspace = true
base64.workspace = true
cron.workspace = true
fastrand.workspace = true
indexmap.workspace = true

[dependencies.web-sys]
version = "0.3.91"
features = ["Document", "Element", "Node", "Window", "HtmlCollection", "HtmlImageElement", "HtmlInputElement",
    "DomRect", "HtmlDialogElement", "CssStyleDeclaration",
    "Event", "MutationObserver", "MutationObserverInit",
    "WebGlRenderingContext", "WebGlProgram", "WebGlShader", "WebGlBuffer", "WebGlUniformLocation",
    "HtmlCanvasElement"]

[dev-dependencies]
wasm-bindgen-test = "0.3.64"
gloo-utils = "0.2.0"
