[package]
name = "shared"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
bitflags = "2.11.0"
serde.workspace = true
regex.workspace = true
enum-iterator.workspace = true
log.workspace = true
path-clean.workspace = true
url.workspace = true
indexmap = { workspace = true, features = ["serde"] }
pest.workspace = true
pest_derive.workspace = true
serde_json.workspace = true
base64.workspace = true
blake3.workspace = true
fastrand = { workspace = true, features = ["js"] }
zeroize.workspace = true
chrono.workspace = true
bytes.workspace = true
ciborium = "0.2.2"
hex = "0.4.3"
lz4_flex.workspace = true
brotli.workspace = true
deunicode.workspace = true
serde-saphyr.workspace = true
dashmap.workspace = true
serde_tuple = "1.1.3"
paste.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3.91"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
getrandom = "0.4.2"
